<resources>
    <string name="app_name">Gym App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="progression">Progression</string>
    <string name="ideas">Ideas</string>
    <string name="add_workout">Add workout</string>
    <string name="bench_press">Bench Press</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>
    <string name="ideas_3x3">3x3</string>
    <string name="ideas_5x5">5x5</string>
    <string name="ideas_joke">Belly dance workout</string>
    <string name="name_taken">Name already taken!</string>
    <string name="name_empty">Name cannot be empty!</string>
    <string name="add_exercise">Add exercise</string>
    <string name="records">Records</string>
    <string name="last_done">Last done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>