<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_workouts"
            style="@style/MenuButton"
            android:text="@string/workouts" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_spacing" />

        <Button
            android:id="@+id/btn_exercises"
            style="@style/MenuButton"
            android:text="@string/exercises" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_spacing" />

        <Button
            android:id="@+id/btn_progression"
            style="@style/MenuButton"
            android:text="@string/progression" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_spacing" />

        <Button
            android:id="@+id/btn_ideas"
            style="@style/MenuButton"
            android:text="@string/ideas" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>