<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdeasFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_3x3"
            style="@style/MenuButton"
            android:text="@string/ideas_3x3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_spacing" />

        <Button
            android:id="@+id/btn_5x5"
            style="@style/MenuButton"
            android:text="@string/ideas_5x5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_spacing" />

        <Button
            android:id="@+id/btn_joke"
            style="@style/MenuButton"
            android:text="@string/ideas_joke" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>