<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.gymapp.MainFragment"
        android:label="Home"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_workoutsFragment"
            app:destination="@id/workoutsFragment" />
        <action
            android:id="@+id/action_mainFragment_to_exercicesFragment2"
            app:destination="@id/exercicesFragment" />
        <action
            android:id="@+id/action_mainFragment_to_progressionFragment"
            app:destination="@id/progressionFragment" />
        <action
            android:id="@+id/action_mainFragment_to_ideasFragment"
            app:destination="@id/ideasFragment" />
    </fragment>
    <fragment
        android:id="@+id/workoutsFragment"
        android:name="com.example.gymapp.WorkoutsFragment"
        android:label="@string/workouts"
        tools:layout="@layout/fragment_workouts" >
        <action
            android:id="@+id/action_workoutsFragment_to_workoutViewFragment"
            app:destination="@id/workoutViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/exercicesFragment"
        android:name="com.example.gymapp.ExercicesFragment"
        android:label="@string/exercises"
        tools:layout="@layout/fragment_exercices" />
    <fragment
        android:id="@+id/progressionFragment"
        android:name="com.example.gymapp.ProgressionFragment"
        android:label="@string/progression"
        tools:layout="@layout/fragment_progression" />
    <fragment
        android:id="@+id/ideasFragment"
        android:name="com.example.gymapp.IdeasFragment"
        android:label="@string/ideas"
        tools:layout="@layout/fragment_ideas" />
    <fragment
        android:id="@+id/workoutViewFragment"
        android:name="com.example.gymapp.WorkoutViewFragment"
        android:label="Workout: {workout_name}"
        tools:layout="@layout/fragment_workout_view">
        <argument
            android:name="workout_name"
            app:argType="string" />
    </fragment>
</navigation>